<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivityPreference">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center_horizontal"
        android:text="@string/preference"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/langue"
        android:textColor="#000000"
        android:textColorLink="#AC4444"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/langPrefer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioFr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/francais"
            android:textColor="#000000"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/anglais"
            android:textColor="#000000"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/niveauDeDifficulte"
        android:textColor="#000000"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/niveauPrefer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioFacile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/facile"
            android:textColor="#000000"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioMoyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/moyen"
            android:textColor="#000000"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioDificile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/difficile"
            android:textColor="#000000"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retourPrefer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/retour" />
    </LinearLayout>

</LinearLayout>