<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:textColor="#FFFFFF"
    tools:context=".MainActivityDictionnaire">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="45dp"
        android:background="#4CAF50"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/lesMotDuDictionnaire"
        android:textColor="#FAFAFA"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/filtreLangue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/langues" />


        <Spinner
            android:id="@+id/filtreDifficulte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/niveau" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ajouterMot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/ajouterUnMot"
            android:textSize="16sp" />

        <Button
            android:id="@+id/retourDic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/retour"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>